[metadata]
name = runescapeapi
version = 3
author = Raatty
author_email = me@raatty.club
license = MIT
description = grandexchange, highscores, beasts, runemetrics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Raatty/runescapeapi
project_urls =
    Bug Tracker = https://github.com/Raatty/runescapeapi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
requires =
    requests

[options]
packages = find:
